toolkit/mozapps/extensions/content/aboutaddons.css
/* ... */
@media (max-width: 950px) {
  :root {
    --main-margin-start: 16px;
    /* Maintain a main margin so card shadows don't overlap the sidebar. */
    --sidebar-width: calc(var(--size-sidebar-narrow) - var(--main-margin-start));
  }
}

*|*[hidden] {
  display: none !important;
}

body {
  cursor: default;
  /* The page starts to look really bad lower than this. */
  min-width: var(--size-layout-xlarge);
}

h1 {
  font-size: var(--font-size-xlarge);
}

h2 {
  font-size: var(--font-size-large);
}

#full {
  display: grid;
  grid-template-columns: var(--sidebar-width) 1fr;
}

#sidebar {
  position: sticky;
  top: 0;
  height: 100vh;
  display: flex;
  flex-direction: column;
  margin: 0;
  overflow: hidden auto;
}

@media (prefers-reduced-motion) {
  /* Setting border-inline-end on #sidebar makes it a focusable element */
  #sidebar::after {
    content: "";
    width: 1px;
    height: 100%;
    background-color: var(--border-color);
    top: 0;
    inset-inline-end: 0;
    position: absolute;
  }
}

.category-badge {
  min-width: var(--dimension-20);
  background-color: var(--color-accent-primary);
  color: var(--button-text-color-primary);
  font-weight: var(--font-weight-bold);
  /* Use a large border-radius to get semi-circles on the sides. */
  border-radius: var(--border-radius-circle);
  padding: var(--space-xxsmall) var(--space-small);
  text-align: center;
  margin-inline-start: auto;
}

.sticky-container {
  background: var(--background-color-canvas);
  width: 100%;
  position: sticky;
  top: 0;
  z-index: var(--z-index-sticky-container);
}

.main-search {
  background: var(--background-color-canvas);
  display: flex;
  justify-content: flex-end;
  align-items: center;
  padding-inline-start: 28px;
  padding-top: 20px;
  padding-bottom: var(--space-small);
  max-width: var(--page-main-content-width);
}

search-addons {
  display: inline-flex;

  > moz-input-search {
    width: 20em;
  }

  > moz-button {
    margin-inline-start: var(--space-xsmall);
  }
}

.search-label {
  margin-inline-end: 8px;
}

.main-heading {
  background: var(--background-color-canvas);
  display: flex;
  margin-inline-start: var(--main-margin-start);
  padding-bottom: 16px;
  max-width: var(--page-main-content-width);
}

.spacer {
  flex-grow: 1;
}

#updates-message {
  display: flex;
  align-items: center;
  margin-inline-end: 8px;
}

.back-button {
  margin-inline-end: 16px;
}

/* Plugins aren't yet disabled by safemode (bug 342333),
   so don't show that warning when viewing plugins. */
#page-header[current-param="plugin"] moz-message-bar[warning-type="safe-mode"] {
  display: none;
}

#main {
  margin-inline-start: var(--main-margin-start);
  margin-bottom: 28px;
  max-width: var(--page-main-content-width);
}

global-warnings {
  margin-inline-start: var(--main-margin-start);
  max-width: var(--page-main-content-width);
}

/* The margin between message bars. */
message-bar-stack > * {
  margin-bottom: 8px;
}

/* List sections */

.list-section-heading {
  margin-bottom: 16px;
}

.list-section-subheading {
  font-size: 0.9em;
  font-weight: normal;
  margin-block-start: 0.5em;
}

.section {
  margin-bottom: 32px;
}

/* Add-on cards */

.addon.card {
  margin-bottom: 16px;
  transition:
    opacity 150ms,
    box-shadow 150ms;
  overflow: hidden;

  & .addon-name-link {
    transition: color 150ms;
  }
}

addon-list:not([type="theme"]) addon-card:not([expanded]):not([panelopen]) > .addon.card[active="false"]:not(:focus-within):not(:hover) {
  opacity: 0.6;
}

.addon.card:hover {
  box-shadow: var(--card-box-shadow);
}

addon-card:not([expanded]) > .addon.card:hover {
  box-shadow: var(--card-box-shadow-hover);
  cursor: pointer;

  & .addon-name-link {
    color: var(--link-color);
  }
}

addon-card[expanded] .addon.card {
  padding-bottom: 0;
}

.addon-card-collapsed {
  display: flex;
}

addon-list addon-card > .addon.card {
  user-select: none;
}

.addon-card-message,
.update-postponed-bar {
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  margin: 8px calc(var(--card-padding) * -1) calc(var(--card-padding) * -1);
}

addon-card[expanded] .addon-card-message,
addon-card[expanded] .update-postponed-bar,
.update-postponed-bar:has(+ .addon-card-message:not([hidden])) {
  border-radius: 0;
  margin-bottom: 0;
}

.update-postponed-bar:has(+ .addon-card-message:not([hidden])) {
  border-bottom: none;
}

.update-postponed-bar:not([hidden]) + .addon-card-message {
  /* Remove margin between the two message bars when they are both
   * visible at the same time. */
  margin-top: 0;
}

/* Theme preview image. */
.card-heading-image {
  /* If the width, height or aspect ratio changes, don't forget to update the
   * getScreenshotUrlForAddon function in aboutaddons.js */
  width: var(--page-main-content-width);
  /* Adjust height so that the image preserves the aspect ratio from AMO.
   * For details, see https://bugzilla.mozilla.org/show_bug.cgi?id=1546123 */
  height: calc(var(--page-main-content-width) * 92 / 680);
  object-fit: cover;
}

.card-heading-icon {
  flex-shrink: 0;
  width: var(--addon-icon-size);
  height: var(--addon-icon-size);
  margin-inline-end: 16px;
  -moz-context-properties: fill;
  fill: currentColor;
}

.card-contents {
  word-break: break-word;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.addon-name-container {
  /* Subtract the top line-height so the text and icon align at the top. */
  margin-top: -3px;
  display: flex;
  align-items: center;
}

.addon-name {
  font-size: 16px;
  font-weight: var(--font-weight-semibold);
  line-height: 22px;
  margin: 0;
  margin-inline-end: 8px;
}

.addon-name-link,
.addon-name-link:hover {
  color: var(--text-color);
  text-decoration: none;
}

.addon-name-link:-moz-focusring {
  /* Since the parent is overflow:hidden to ellipsize the regular outline is hidden. */
  outline-offset: -1px;
  outline-width: 1px;
}
/* ... */

